src/objects/maps__FolderPermission__c.object
<CustomObject>
    <fields>
        <fullName>maps__Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Export__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>maps__Folder__c</referenceTo>
        <relationshipLabel>Maps Folder Permissions</relationshipLabel>
        <relationshipName>Maps_Folder_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Modify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__ProfileId__c</fullName>
        <label>Profile Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__SetPermissions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Maps_Folder_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Folder Permission</label>
    <listViews>
        <fullName>maps__All</fullName>
        <columns>NAME</columns>
        <columns>maps__Folder__c</columns>
        <columns>maps__User__c</columns>
        <columns>maps__ProfileId__c</columns>
        <columns>maps__Create__c</columns>
        <columns>maps__Modify__c</columns>
        <columns>maps__Delete__c</columns>
        <columns>maps__SetPermissions__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FP{00000000}</displayFormat>
        <label>Folder Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Folder Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>